corrected fonts of card section

--- a/index.html
+++ b/index.html
@@ -63,49 +63,49 @@
                 
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
-                        <h3>Lily Blossom</h3>
+                        <h3 class="fon-weigh">Lily Blossom</h3>
                         <h3>20 USD</h3>
                         <button>ADD TO CART</button>
                 </div>  
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
-                        <h3>Lily Blossom</h3>
+                        <h3 class="fon-weigh">Lily Blossom</h3>
                         <h3>20 USD</h3>
                         <button>ADD TO CART</button>
                 </div>  
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
-                        <h3>Lily Blossom</h3>
+                        <h3 class="fon-weigh">Lily Blossom</h3>
                         <h3>20 USD</h3>
                         <button>ADD TO CART</button>
                 </div>  
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
-                        <h3>Lily Blossom</h3>
+                        <h3 class="fon-weigh">Lily Blossom</h3>
                         <h3>20 USD</h3>
                         <button>ADD TO CART</button>
                 </div>  
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
-                        <h3>Lily Blossom</h3>
+                        <h3 class="fon-weigh">Lily Blossom</h3>
                         <h3>20 USD</h3>
                         <button>ADD TO CART</button>
                 </div>  
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
-                        <h3>Lily Blossom</h3>
+                        <h3 class="fon-weigh">Lily Blossom</h3>
                         <h3>20 USD</h3>
                         <button>ADD TO CART</button>
                 </div>  
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
-                        <h3>Lily Blossom</h3>
+                        <h3 class="fon-weigh">Lily Blossom</h3>
                         <h3>20 USD</h3>
                         <button>ADD TO CART</button>
                 </div>  
                 <div class="card">
                     <img src="assets/sample-flower-image.png" alt="">
-                        <h3>Lily Blossom</h3>
+                        <h3 class="fon-weigh">Lily Blossom</h3>
                         <h3>20 USD</h3>
                         <button>ADD TO CART</button>
                 </div>  
