--- a/index.html
+++ b/index.html
@@ -137,37 +137,37 @@
         <section class="deal-section">
             <div class="container">
 
-    <div class="left-column">
-      <div class="image-box">
-        <img src="assets/deal-bloom.png" alt="Bloom Plant">
-        <div class="overlay"></div>
-        <div class="text-overlay1">
-          <div>60% Off | Bloom Plant</div>
-          <div class="subtitle1">Shop Now</div>
-        </div>
-      </div>
+                <div class="left-column">
+                <div class="image-box">
+                    <img src="assets/deal-bloom.png" alt="Bloom Plant">
+                    <div class="overlay"></div>
+                    <div class="text-overlay1">
+                    <div>60% Off | Bloom Plant</div>
+                    <div class="subtitle1">Shop Now</div>
+                    </div>
+                </div>
 
-      <div class="image-box">
-        <img src="assets/deal-ana.png" alt="Ana Plant">
-        <div class="overlay"></div>
-        <div class="text-overlay1">
-          <div>30% Off | Ana Plant</div>
-          <div class="subtitle1">Shop Now</div>
-        </div>
-      </div>
-    </div>
+                <div class="image-box"   id="secondimag">
+                    <img src="assets/deal-ana.png" alt="Ana Plant">
+                    <div class="overlay"></div>
+                    <div class="text-overlay1">
+                    <div>30% Off | Ana Plant</div>
+                    <div class="subtitle1">Shop Now</div>
+                    </div>
+                </div>
+                </div>
 
-    <div class="image-box large-box">
-      <img src="assets/deal-zabo.png" alt="Zabo Plant">
-      <div class="overlay"></div>
-      <div class="text-overlay2">
-        <div>25% Off | Zabo Plant</div>
-        <div class="subtitle2"  id="big-text">Shop Now</div>
-      </div>
-    </div>
+                <div class="image-box large-box">
+                <img src="assets/deal-zabo.png" alt="Zabo Plant">
+                <div class="overlay"></div>
+                <div class="text-overlay2">
+                    <div>25% Off | Zabo Plant</div>
+                    <div class="subtitle2"  id="big-text">Shop Now</div>
+                </div>
+                </div>
 
-  </div>
-  </div>
+            </div>
+            </div>
         </section>
 
 </div>
