--- a/index.html
+++ b/index.html
@@ -174,10 +174,12 @@
 
         <section class="subscribe-section"> 
             <h2>Join the colorful Bunch</h2>
-            <form class="subscribe-form">
-                <input type="email" placeholder="Write email"/>
-                <a href="" ><BUTTON type="submit" class="last-btn">Subscribe</BUTTON></a>
-            </form>
+            <div class="form">
+                <form class="subscribe-form">
+                    <input type="email" placeholder="Write email"/>
+                    <a href="" ><BUTTON type="submit" class="last-btn">Subscribe</BUTTON></a>
+                </form>
+            </div>
 
         </section>
     </main>
